--- a/styles/globals.css
+++ b/styles/globals.css
@@ -363,11 +363,11 @@ background-color: rgba(0, 0, 0, 0);
   width: 100%
 }
 .main-footer {
-  font-size: 20px;
+  font-size: 15px;
   text-align: left;
   background-color: rgba(0, 0, 0, 0);
   text-decoration: none;
-  padding: 20px;
+  padding: 10px;
 }
 .main-logo {
   height: 100px;
@@ -378,7 +378,7 @@ background-color: rgba(0, 0, 0, 0);
 }
 .contact {
   width: 90%;
-  height: 300px;
+  height: 100%;
   background-image: url(../img/event4.jpg);
   background-color: rgba(0, 0, 0, 0.5);
   background-repeat: no-repeat;
