--- a/styles/globals.css
+++ b/styles/globals.css
@@ -393,6 +393,38 @@ background-color: rgba(0, 0, 0, 0);
 .talk {
 
 }
+.count-paper {
+  width: 90%;
+  height: 400px;
+  background-image: url(../img/event4.jpg);
+  background-color: rgba(0, 0, 0, 0.5);
+  background-repeat: no-repeat;
+  display: grid;
+  border-radius: 10px;
+  margin-top: 40px;
+  background-size: cover;
+}
+
+/* #particle-canvas {
+  position:fixed !important;
+  left:0;
+  top:0;
+  width:100%;
+  height:100%;
+} */
+.particles {
+  
+  position:fixed;
+  left:0;
+  top:0;
+  width:100%;
+  height:100%;
+  
+}
+.bonus-talk {
+  margin-top: 100px;
+}
+
 
 
 
@@ -629,7 +661,30 @@ background-color: rgba(0, 0, 0, 0);
   height: 550px;
   width: 500px
 }
-
+.count-paper {
+  width: 60%;
+  height: 450px;
+  background-image: url(../img/event4.jpg);
+  background-color: rgba(0, 0, 0, 0.5);
+  background-repeat: no-repeat;
+  display: grid;
+  border-radius: 10px;
+  margin-top: 40px;
+  background-size: cover;
+}
+.winster-header {
+  margin-left: -20px;
+}
+.winster-logo {
+  margin-top: -70px;
+  margin-right: -100px;
+}
+.winster-top {
+  margin-top: 80px;
+}
+.bonus-talk {
+  margin-top: 200px;
+}
 
 
 }
