--- a/styles/styles.css
+++ b/styles/styles.css
@@ -338,7 +338,7 @@ input:-webkit-autofill
     background-repeat: no-repeat;
     display: grid;
     border-radius: 10px;
-    margin-top: 40px;
+    margin-top: 20px;
     background-size: cover;
   }
   
@@ -594,13 +594,13 @@ input:-webkit-autofill
   }
   .count-paper {
     width: 60%;
-    height: 450px;
+    height: auto;
     background-image: url(../img/event4.jpg);
     background-color: rgba(0, 0, 0, 0.5);
     background-repeat: no-repeat;
     display: grid;
     border-radius: 10px;
-    margin-top: 40px;
+    margin-top: 20px;
     background-size: cover;
   }
   .winster-header {
