--- a/styles/styles.css
+++ b/styles/styles.css
@@ -432,8 +432,9 @@ input:-webkit-autofill
   background-image: url(../img/bg_3.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  width: 80%;
+  width: 100%;
   height: 200px;
+  margin-top: -20px;
 
 }
 .hardware-1 {
@@ -442,6 +443,7 @@ input:-webkit-autofill
   background-size: cover;
   width: 85%;
   height: 100%;
+
   
 }
 
@@ -451,6 +453,8 @@ input:-webkit-autofill
   background-size: cover;
   width: 85%;
   height: 100%;
+  margin-top: 40px;
+  
 }
 .hardware-group {
   height: 200px;
@@ -458,8 +462,8 @@ input:-webkit-autofill
   margin-top: 40px;
 }
 .mining {
-  margin-top: 60px;
-  margin-bottom: 60px;
+  margin-top: 40px;
+  margin-bottom: 20px;
 }
 .crypto-market {
   padding: 0px;
@@ -473,8 +477,12 @@ input:-webkit-autofill
   margin-top: 20px;
   margin-bottom: 20px;
 }
-
-
+.mining-talk {
+  padding-left: 20px;
+}
+.hardware-talk {
+  margin-left: -20px;
+}
 
 
 
@@ -485,6 +493,9 @@ input:-webkit-autofill
 
 
   @media all and (min-width:800px){
+    .mining-talk {
+      padding-left: 75px;
+    }
     .mid-testimonial {
       /* margin-top: 20px;
       margin-bottom: 20px; */
@@ -506,7 +517,7 @@ input:-webkit-autofill
       background-size: cover;
       width: 80%;
       height: 100%;
-    
+      margin-top: 0px;
     }
 
     .hardware-1 {
@@ -523,6 +534,7 @@ input:-webkit-autofill
       background-size: cover;
       width: 80%;
       height: 100%;
+      margin-top: 0px;
     }
 
     .hardware-group {
