--- a/styles/styles.css
+++ b/styles/styles.css
@@ -488,6 +488,42 @@ input:-webkit-autofill
 .main-appbar {
   margin-bottom: 100px;
 }
+.nav-link {
+  color: aliceblue;
+    position: relative;
+    margin: 30px;
+    /* margin-top: 30px; */
+    font-weight: 400;
+    font-size: 12px;
+    /* textTransform: uppe; */
+    border-radius: 3px;
+    line-height: 20px;
+    text-decoration: none;
+    /* margin: 0px; */
+    display: inline-flex;
+    border-bottom: 1px solid #ffab00;
+}
+
+.nav-link:hover {
+  color: white;
+  background: rgba(200, 200, 200, 0.2);
+}
+.appbar-container {
+  min-height: 50px;
+  flex: 1;
+  /* align-items: center; */
+  justify-content: space-around;
+  display: flex;
+  flex-wrap:nowrap;
+  margin-top: 10px;
+  
+}
+.depo-modal {
+  width: 90%;
+}
+
+
+
 
 
 
@@ -496,6 +532,43 @@ input:-webkit-autofill
 
 
   @media all and (min-width:800px){
+    .depo-modal {
+      width: 60%;
+    }
+    .appbar-login {
+      min-height: 50px;
+      flex: 1;
+      align-items: center;
+      justify-content: space-evenly;
+      display: flex;
+      flex-wrap:nowrap;
+      margin-top: -3px;
+      
+    }
+    .appbar-container {
+      min-height: 50px;
+      flex: 1;
+      align-items: center;
+      justify-content: space-evenly;
+      display: flex;
+      flex-wrap:nowrap;
+      margin-top: 10px;
+      
+    }
+    .nav-link {
+      color: inherit;
+        position: relative;
+        margin: 10px;
+        font-weight: 400;
+        font-size: 12px;
+        /* textTransform: uppe; */
+        border-radius: 3px;
+        line-height: 20px;
+        text-decoration: none;
+        /* margin: 0px; */
+        display: inline-flex;
+        border-bottom:none
+    }
     .mining-talk {
       padding-left: 75px;
     }
@@ -569,10 +642,11 @@ input:-webkit-autofill
     background-image: url(../img/event4.jpg);
     height:auto;
     background-repeat: no-repeat;
-    width: 60%;
+    width: 50%;
     border-radius: 10px;
-    margin-top: 60px;
+    /* margin-top: 60px; */
     background-size: cover;
+    
     
   }
   .profile-paper {
