--- a/styles/styles.css
+++ b/styles/styles.css
@@ -471,7 +471,7 @@ input:-webkit-autofill
 .faqs-paper {
   width:90%;
   padding: 20px;
-  background-color: #131519;
+  /* background-color: #131519; */
   
 }
 .mid-testimonial {
